Refactoring method getDurationInMinutes